# core

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CppCheckSuppressions.txt  LICENSE  Makefile  README.md  build_no_std.sh  common_test_helpers.h  compare_different_union_polymorphism.cpp  core_sandbox.cpp  core_test.cpp  example_impl1.h  example_impl2.h  example_interface_file.h  main.cpp  sandbox.cpp  test.cpp  test_no_std.cpp  valgrind.supp
.github/workflows/: build_cmake.yml  mac_cmake.yml  ubuntu_cmake.yml  windows_cmake.yml
__original_ryu/: f2s_intrinsics.h  ryu_parse.h  s2f.cpp
cmake_local/: ClangFlags.cmake  CoreClangFlags.cmake  CoreDefaultFlags.cmake  CoreGCCFlags.cmake  CoreMSVCFlags.cmake  DefaultFlags.cmake  GCCFlags.cmake  MSVCFlags.cmake  UpdateGitSubmodules.cmake
examples/: CMakeLists.txt  CMakePresets.json  grid.h  init_core.cpp  init_core.h  keyboard.cpp  keyboard.h  main.cpp  mesh.cpp  mesh.h  mouse.cpp  mouse.h  shader_prog.cpp  shader_prog.h  shape.cpp  shape.h  unity_build.h
examples/ex/: common.cpp  common.h  experiment_01_triangle_and_quad.cpp  experiment_01_triangle_and_quad.h  experiment_02_textures.cpp  experiment_02_textures.h  experiment_03_transformations.cpp  experiment_03_transformations.h  experiment_04_rotating_cube.cpp  experiment_04_rotating_cube.h  experiment_05_camera.cpp  experiment_05_camera.h  experiment_app.cpp  experiment_app.h  keyboard_and_mouse.cpp  keyboard_and_mouse.h  ray_in_voxel_space.cpp  ray_in_voxel_space.h  raytracing.cpp  raytracing.h
examples/ex/mat_refactor/: mat.h  mat_example.cpp  mat_example.h
examples/src/: __keyboard.h  bbox.h  box.cpp  box.h  grid.h  init_core.cpp  init_core.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  shader_prog.cpp  shader_prog.h  shape.cpp  shape.h
examples/src/glfw/: glfw_impl.h  glfw_keyboard.cpp  glfw_mouse.cpp
experimental/: better_tuple.cpp  main.cpp  move_and_forward.h  useful_casting.h  zero_cost_defer.cpp
include/: core.h  core_algorithms.h  core_alloc.h  core_arr.h  core_assert.h  core_assert_fmt.h  core_bits.h  core_cmd_flag_parser.h  core_compiler.h  core_cptr.h  core_cptr_conv.h  core_cstr.h  core_cstr_conv.h  core_cstr_format.h  core_enum.h  core_exec_ctx.h  core_expected.h  core_hash.h  core_hash_map.h  core_intrinsics.h  core_ints.h  core_logger.h  core_macros.h  core_math.h  core_mem.h  core_profiler.h  core_rnd.h  core_sarr.h  core_stack.h  core_str_builder.h  core_str_view.h  core_system_checks.h  core_traits.h  core_tuple.h  core_types.h  core_unique_ptr.h  core_utf.h  core_utils.h
include/asm/: core_asm.h  core_asm_x86_64.h  core_clang_gcc_asm_x86_64.h  (+1 more)
scripts/: run_tests.sh  run_tests_with_valgrind.sh  test_all_presets.sh
src/: API.h  CMakeLists.txt  __CMakeLists.txt  algorithms.h  alloc.h  alloc_bump.h  arr.h  bits.cpp  bits.h  char_ptr.cpp  char_ptr.h  char_ptr_conv.h  cmd_flag.h  compiler.h  core.h  core_alloc.cpp  core_assert.cpp  core_bits.cpp  core_cmd_flag_parser.cpp  core_exec_ctx.cpp  core_hash.cpp  core_intrinsics.cpp  core_logger.cpp  core_math.cpp  core_math.h  core_mem.cpp  core_profiler.cpp  core_rnd.cpp  core_str_builder.cpp  core_traits.h  core_utils.cpp  expected.h  hash.cpp  hash.h  hash_map.h  integers.cpp  intrin.cpp  intrin.h  intrinsic.cpp  intrinsic.h  (+28 more)
src/alloc/: bump.h  interface.h
src/allocators/: bump_allocator.cpp  core_alloc_bump.cpp  core_alloc_stats_std.cpp  core_alloc_std.cpp  std_allocator.cpp  std_arena_allocator.cpp  std_stats_allocator.cpp
src/asm/: core_asm_x86_64.cpp  core_asm_x86_64_msvc.cpp  msvc_add_no_overflow.asm  msvc_mul_no_overflow.asm  msvc_sub_no_overflow.asm
src/core_extensions/: hash_functions.cpp
src/ds/: interface.h
src/io/: interface.h
src/math/: core_projections.cpp
src/plt/: core_fs.cpp
src/plt/linux/: linux_time.cpp
src/plt/mac/: mac_time.cpp
src/plt/unix/: unix_fs.cpp  unix_pages.cpp  unix_plt_error.cpp  unix_process.cpp  unix_stacktrace.cpp  unix_threading.cpp  unix_time.cpp
src/plt/win/: win_fs.cpp  win_pages.cpp  win_plt_error.cpp  win_process.cpp  win_stacktrace.cpp  win_threading.cpp  win_time.cpp
src/std/: _fs.h  alloc_std.cpp  alloc_std.h  alloc_std_stats.cpp  alloc_std_stats.h  bbox.h  ccmath.h  core.h  fs.cpp  fs.h  lines.h  mat.h  once.h  plt.h  plt_error.h  projections.cpp  projections.h  stacktrace.h  stringer.h  threading.h  traits.h  transforms.h  vec.h
src/std/alloc/: alloc.h  alloc_bump.h  alloc_interface.h  alloc_std.cpp  alloc_std.h  static_bump_alloc.h  std.cpp  std.h  std_alloc.cpp
src/std/allocators/: README.md  alloc_std.cpp  alloc_std.h  alloc_std_stats.cpp  alloc_std_stats.h
src/std/error/: core_error.h
src/std/fs/: fs.cpp  fs.h
src/std/io/: io.h
src/std/math/: vec.h
src/std/platform/: plt.h
src/std/platform/unix/: plt.cpp  time.cpp
src/std/platform/win64/: plt.cpp  time.cpp
src/std/plt/: plt.h
src/std/plt/unix/: unix_plt.cpp  unix_plt.h  unix_stacktrace.cpp  unix_threading.cpp  unix_threading.h
src/std/plt/win64/: win64_plt.cpp  win64_stacktrace.cpp
src/std/sync/: once.h
src/std/traits/: traits.h
src/testing/: core_testing.cpp  testing_framework.cpp
test/: allocator_bump_static.cpp  ds_arr_generic_test_functions.cpp  run_tests.cpp  rune_tests.cpp  t-alloc_bump.cpp  t-arr.cpp  t-bits.cpp  t-char_ptr_conv.cpp  t-cmd_flag.cpp  t-core_math.cpp  t-cptr_ptr.cpp  t-defer.cpp  t-expected.cpp  t-flag_parser.cpp  t-hash.cpp  t-hash_map.cpp  t-intrinsic.cpp  t-ints.cpp  t-mem.cpp  t-rnd.cpp  t-rune.cpp  t-static_arr.cpp  t-str_builder.cpp  t-traits.cpp  t-tuple.cpp  t-unique_ptr.cpp  test_main.cpp
tests/: index.h  t-algorithms.cpp  t-arr.cpp  t-bits.cpp  t-cmd_flag_parser.cpp  t-cptr.cpp  t-cptr_conv.cpp  t-cstr.cpp  t-cstr_conv.cpp  t-cstr_conv_cstr_to_float.cpp  t-cstr_conv_float_to_cstr.cpp  t-cstr_format.cpp  t-defer.cpp  t-expected.cpp  t-hash.cpp  t-hash_map.cpp  t-index.h  t-index_core_init.cpp  t-intrinsics.cpp  t-ints.cpp  t-logger.cpp  t-math.cpp  t-mem.cpp  t-rnd.cpp  t-sarr.cpp  t-stack.cpp  t-str_builder.cpp  t-str_view.cpp  t-traits.cpp  t-tuple.cpp  t-unique_ptr.cpp  t-utf.cpp
(+91 files in other folders)
